--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head> <link rel="stylesheet" href="style.css">
     <title>Life Basis: Earth-life-game</title>
     <style>
         body { margin: 0; background-color: #000; color: white; font-family: sans-serif; overflow: hidden; }
