--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Life Basis | Earth-Life-Game</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
@@ -27,6 +27,6 @@
 
     <canvas id="gameCanvas"></canvas>
 
-    <script src="script.js"></script>
+   <script src="./script.js"></script>
 </body>
 </html>
