--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
     <canvas id="gameCanvas"></canvas>
 
     <script>
+        // --- THE SIMS DIAMOND (Plumbob) ---
+const diamondGeo = new THREE.OctahedronGeometry(0.3, 0); // Diamond shape
+const diamondMat = new THREE.MeshStandardMaterial({ color: 0x00ff00, emissive: 0x00ff00 });
+const plumbob = new THREE.Mesh(diamondGeo, diamondMat);
+scene.add(plumbob);
+
+// To make the diamond follow you, add this inside your animate() function:
+// plumbob.position.set(player.position.x, player.position.y + 1.5, player.position.z);
+// plumbob.rotation.y += 0.05;
         // --- 2. THE 3D SCENE SETUP ---
         const scene = new THREE.Scene();
         scene.background = new THREE.Color(0x0a0a0a);
