--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         #ui-layer { position: absolute; top: 10px; left: 10px; padding: 15px; background: rgba(0,0,0,0.7); border: 2px solid #00ffcc; border-radius: 10px; width: 220px; z-index: 10; }
         .retro-ui { background: #c0c0c0 !important; border: 4px outset #fff !important; color: #000 !important; }
         button { width: 100%; margin: 5px 0; padding: 10px; background: #222; color: #00ffcc; border: 1px solid #00ffcc; cursor: pointer; font-weight: bold; }
-        canvas { display: block; }
     </style>
 </head>
 <body>
@@ -29,108 +28,91 @@
     <canvas id="gameCanvas"></canvas>
 
     <script>
-      
-        // --- THE SIMS DIAMOND (Plumbob) ---
-const diamondGeo = new THREE.OctahedronGeometry(0.3, 0); // Diamond shape
-const diamondMat = new THREE.MeshStandardMaterial({ color: 0x00ff00, emissive: 0x00ff00 });
-const plumbob = new THREE.Mesh(diamondGeo, diamondMat);
-scene.add(plumbob);
-        // ... after Kroger code ...
-scene.add(sign); 
-
-// PASTE TARGET HERE
-const targetGeo = new THREE.BoxGeometry(6, 4, 4);
-// ... and so on ...
-scene.add(target);
-
-// To make the diamond follow you, add this inside your animate() function:
-// plumbob.position.set(player.position.x, player.position.y + 1.5, player.position.z);
-// plumbob.rotation.y += 0.05;
-        // --- 2. THE 3D SCENE SETUP ---
+        // --- 1. SETUP ---
         const scene = new THREE.Scene();
         scene.background = new THREE.Color(0x0a0a0a);
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-        const renderer = new THREE.WebGLRenderer({ canvas: document.getElementById('gameCanvas') });
+        const renderer = new THREE.WebGLRenderer({ canvas: document.getElementById('gameCanvas'), antialias: true });
         renderer.setSize(window.innerWidth, window.innerHeight);
 
-        // Lights
         const light = new THREE.PointLight(0xffffff, 1, 100);
         light.position.set(10, 10, 10);
         scene.add(light);
         scene.add(new THREE.AmbientLight(0x404040));
 
-        // --- 3. THE GROUND & GRID ---
+        // --- 2. THE WORLD (Ground & Grid) ---
         const grid = new THREE.GridHelper(100, 50, 0x00ffcc, 0x222222);
         grid.position.y = -0.5;
         scene.add(grid);
 
-        // --- 4. THE PLAYER ---
-        const geometry = new THREE.BoxGeometry(1, 1, 1);
-        const material = new THREE.MeshStandardMaterial({ color: 0x00ffcc });
-        const player = new THREE.Mesh(geometry, material);
+        // --- 3. THE BUILDINGS ---
+        // KROGER (Blue)
+        const krogerGeo = new THREE.BoxGeometry(6, 4, 4);
+        const krogerMat = new THREE.MeshStandardMaterial({ color: 0x4444ff });
+        const kroger = new THREE.Mesh(krogerGeo, krogerMat);
+        kroger.position.set(-5, 1.5, -15); 
+        scene.add(kroger);
+
+        // TARGET (Red)
+        const targetGeo = new THREE.BoxGeometry(6, 4, 4);
+        const targetMat = new THREE.MeshStandardMaterial({ color: 0xff4444 });
+        const target = new THREE.Mesh(targetGeo, targetMat);
+        target.position.set(5, 1.5, -15); 
+        scene.add(target);
+
+        // --- 4. THE PLAYER & DIAMOND ---
+        const playerGeo = new THREE.BoxGeometry(1, 1, 1);
+        const playerMat = new THREE.MeshStandardMaterial({ color: 0x00ffcc });
+        const player = new THREE.Mesh(playerGeo, playerMat);
         scene.add(player);
+
+        const diamondGeo = new THREE.OctahedronGeometry(0.2, 0);
+        const diamondMat = new THREE.MeshStandardMaterial({ color: 0x00ff00, emissive: 0x00ff00 });
+        const plumbob = new THREE.Mesh(diamondGeo, diamondMat);
+        scene.add(plumbob);
+
         camera.position.z = 5;
         camera.position.y = 2;
 
-        // --- 5. THE KROGER STORE ---
-        const krogerGeo = new THREE.BoxGeometry(6, 4, 4);
-        const krogerMat = new THREE.MeshStandardMaterial({ color: 0x4444ff }); // Blue
-        const kroger = new THREE.Mesh(krogerGeo, krogerMat);
-        kroger.position.set(0, 1.5, -15); // Down the street
-        scene.add(kroger);
-
-        const signGeo = new THREE.BoxGeometry(3, 1, 0.2);
-        const signMat = new THREE.MeshBasicMaterial({ color: 0xff0000 }); // Red Sign
-        const sign = new THREE.Mesh(signGeo, signMat);
-        sign.position.set(0, 4, -13);
-        scene.add(sign);
-
-        // --- 6. GAME LOGIC ---
+        // --- 5. LOGIC ---
         function changeEra(year) {
             document.getElementById('era-display').innerText = year;
-            const ui = document.getElementById('ui-layer');
-            if (year === '1990') {
-                ui.classList.add('retro-ui');
-                scene.background = new THREE.Color(0x332211); // Old Photo vibe
-            } else {
-                ui.classList.remove('retro-ui');
-                scene.background = new THREE.Color(0x0a0a0a);
-            }
+            scene.background = (year === '1990') ? new THREE.Color(0x332211) : new THREE.Color(0x0a0a0a);
         }
 
         function setRole(role) {
             document.getElementById('role-display').innerText = role;
             if (role === 'Dog') {
-                player.scale.set(1.2, 0.4, 0.6); // Long and short
-                player.material.color.setHex(0x8B4513); // Brown
+                player.scale.set(1.2, 0.4, 0.6);
+                player.material.color.setHex(0x8B4513);
             } else {
                 player.scale.set(1, 1, 1);
-                player.material.color.setHex(0x00ffcc); // Neon
+                player.material.color.setHex(0x00ffcc);
             }
         }
 
-        // --- 7. CONTROLS ---
+        // --- 6. MOVEMENT ---
         const keys = {};
         window.addEventListener('keydown', (e) => keys[e.key.toLowerCase()] = true);
         window.addEventListener('keyup', (e) => keys[e.key.toLowerCase()] = false);
 
         function animate() {
             requestAnimationFrame(animate);
-            
-            // Movement logic
             if (keys['w']) player.position.z -= 0.1;
             if (keys['s']) player.position.z += 0.1;
             if (keys['a']) player.position.x -= 0.1;
             if (keys['d']) player.position.x += 0.1;
 
+            // Plumbob follows player
+            plumbob.position.set(player.position.x, player.position.y + 1.2, player.position.z);
+            plumbob.rotation.y += 0.05;
+
             // Camera follows player
             camera.position.x = player.position.x;
             camera.position.z = player.position.z + 5;
-
             renderer.render(scene, camera);
         }
         animate();
     </script>
 </body>
 </html>
-
